@@ -1,3 +1,4 @@
+* Support field name on image tag
 * Add option to check new version
 * Show related record names for all windows
 * Remove support of GTK+ 2.0
